--- a/05_DynamicContents/views/shop.pug
+++ b/05_DynamicContents/views/shop.pug
@@ -4,9 +4,9 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title MyShop
+        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
-        link(rel="stylesheet", href="")
+        link(rel="stylesheet", href="/css/product.css")
     body 
       header.main-header 
         nav.main-header__nav
@@ -14,9 +14,24 @@ html(lang="en")
                 li.main-header__item
                     a.active(href='/') Shop 
                 li.main-header__item
-                    a.active(href="/admin/add-product") Add Product  
-
-
+                    a(href="/admin/add-product") Add Product  
+    
+    main
+        if prods.length > 0 
+            .grid
+                each product in prods
+                    article.card.product-item
+                        header.card__header
+                            h1.product__title  #{product.title}
+                        div.card__image
+                            img(src="https://images.unsplash.com/photo-1544947950-fa07a98d237f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1887&q=80" alt="A Book")
+                        div.card__content
+                            h2.product__price $19.99
+                            p.product__description A very interesting book about so many even more interesting things!
+                        .card__actions
+                            button.btn Add to Cart
+        else 
+            h1 No Products     
 
 
 
