--- a/05_DynamicContents/views/admin/add-product.ejs
+++ b/05_DynamicContents/views/admin/add-product.ejs
@@ -1,11 +1,11 @@
-<%- include('partials/head.ejs') %>
+<%- include('../partials/head.ejs') %>
 
     <link rel="stylesheet" href="/css/forms.css">
     <link rel="stylesheet" href="/css/product.css">
     </head>
 
     <body>
-        <%- include('partials/navbar.ejs') %>
+        <%- include('../partials/navbar.ejs') %>
 
             <main>
                 <form class="product-form" action="/admin/add-product" method="POST">
@@ -17,4 +17,4 @@
                     <button class="btn" type="submit">Add Product</button>
                 </form>
             </main>
-            <%- include('partials/footer.ejs') %>
+            <%- include('../partials/footer.ejs') %>
