--- a/05_DynamicContents/public/css/product.css
+++ b/05_DynamicContents/public/css/product.css
@@ -1,12 +1,14 @@
-.product-form {
+product-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
+    display: block;
 }
 
 .product-item {
     width: 20rem;
     max-width: 95%;
+    margin: 1rem;
 }
 
 .product__title {
