rendering the product details

--- a/05_DynamicContents/views/shop/orders.ejs
+++ b/05_DynamicContents/views/shop/orders.ejs
@@ -4,6 +4,8 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
-                <h1>No Orders Found</h1>
+                <h1>
+                    <%= product.title %>
+                </h1>
             </main>
             <%- include('../partials/footer.ejs') %>
