--- a/05_DynamicContents/views/shop/product-details.ejs
+++ b/05_DynamicContents/views/shop/product-details.ejs
@@ -4,6 +4,21 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main class='centered'>
-
+                <h1>
+                    <%= product.title %>
+                </h1>
+                <hr>
+                <div>
+                    <img src="<%= product.imageUrl %>" alt="<%= product.title %> ">
+                </div>
+                <h2>
+                    <%= product.price%>
+                </h2>
+                <p>
+                    <%= product.description %>
+                </p>
+                <form action="/add-to-cart" method="POST">
+                    <button class="btn">Add to Cart</button>
+                </form>
             </main>
             <%- include('../partials/footer.ejs') %>
