--- a/05_DynamicContents/views/shop/index.ejs
+++ b/05_DynamicContents/views/shop/index.ejs
@@ -25,7 +25,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <button class="btn">Add to Cart</button>
+                                    <%- include('../partials/add-to-cart.ejs', {product : product}) %>
                                 </div>
                             </article>
                             <% } %>
