--- a/05_DynamicContents/views/shop/product-details.ejs
+++ b/05_DynamicContents/views/shop/product-details.ejs
@@ -17,8 +17,6 @@
                 <p>
                     <%= product.description %>
                 </p>
-                <form action="/add-to-cart" method="POST">
-                    <button class="btn">Add to Cart</button>
-                </form>
+                <%- include('../partials/add-to-cart.ejs', {product : product}) %>
             </main>
             <%- include('../partials/footer.ejs') %>
