--- a/05_DynamicContents/views/admin/products.ejs
+++ b/05_DynamicContents/views/admin/products.ejs
@@ -25,7 +25,8 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product" class="btn">Edit</button></a>
+                                    <a href="/admin/edit-product/<%=product.id%>?edit=true"
+                                        class="btn">Edit</button></a>
                                     <form action="'/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
