displaying cart and adding product-delete functionalities

--- a/05_DynamicContents/views/admin/edit-product.ejs
+++ b/05_DynamicContents/views/admin/edit-product.ejs
@@ -7,6 +7,7 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
 
+
             <main>
                 <form class="product-form"
                     action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
@@ -16,7 +17,7 @@
                             value="<% if (editing) { %><%= product.title %><% } %>">
                     </div>
                     <div class="form-control">
-                        <label for="imageUrl">Image Url</label>
+                        <label for="imageUrl">Image URL</label>
                         <input type="text" name="imageUrl" id="imageUrl"
                             value="<% if (editing) { %><%= product.imageUrl %><% } %>">
                     </div>
@@ -27,11 +28,11 @@
                     </div>
                     <div class="form-control">
                         <label for="description">Description</label>
-                        <textarea name="description" id="description" rows="5"><% if (editing) { %><%= product.description %><% } %>
-                        </textarea>
+                        <textarea name="description" id="description"
+                            rows="5"><% if (editing) { %><%= product.description %><% } %></textarea>
                     </div>
                     <% if (editing) { %>
-                        <input type="hidden" value="<%= product.id%>" name="productId">
+                        <input type="hidden" value="<%= product.id %>" name="productId">
                         <% } %>
 
                             <button class="btn" type="submit">
