--- a/05_DynamicContents/views/shop/cart.ejs
+++ b/05_DynamicContents/views/shop/cart.ejs
@@ -3,4 +3,18 @@
 
     <body>
         <%- include('../partials/navbar.ejs') %>
+            <main>
+                <% if (products.length> 0) { %>
+                    <ul>
+                        <% products.forEach(p=> {
+                            %>
+                            <li>
+                                <%= p.productData.title %> (<%=p.qty %>)
+                            </li>
+                            <% }) %>
+                    </ul>
+                    <% } else { %>
+                        <h1>No Products in Cart!</h1>
+                        <% } %>
+            </main>
             <%- include('../partials/footer.ejs') %>
