--- a/05_DynamicContents/views/shop/cart.ejs
+++ b/05_DynamicContents/views/shop/cart.ejs
@@ -9,7 +9,13 @@
                         <% products.forEach(p=> {
                             %>
                             <li>
-                                <%= p.productData.title %> (<%=p.qty %>)
+                                <p>
+                                    <%= p.productData.title %> (<%=p.qty %>)
+                                </p>
+                                <form action='/cart-delete-item' method="POST">
+                                    <input type="hidden" value="<%= p.productData.id %>" name="productId">
+                                    <button class='btn' type="submit">Delete</button>
+                                </form>
                             </li>
                             <% }) %>
                     </ul>
