deleting related items and deleting cart products

--- a/05_DynamicContents/views/shop/product-list.ejs
+++ b/05_DynamicContents/views/shop/product-list.ejs
@@ -5,6 +5,7 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
+
                 <% if (prods.length> 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
@@ -15,10 +16,11 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl  %> " alt="A Book">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$<%= product.price %>
+                                    <h2 class="product__price">$
+                                        <%= product.price %>
                                     </h2>
                                     <p class="product__description">
                                         <%= product.description %>
@@ -26,6 +28,7 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/products/<%= product.id %>" class="btn">Details</a>
+
                                     <%- include('../partials/add-to-cart.ejs', {product : product}) %>
                                 </div>
                             </article>
