--- a/05_DynamicContents/views/shop/cart.ejs
+++ b/05_DynamicContents/views/shop/cart.ejs
@@ -1,20 +1,23 @@
 <%- include('../partials/head.ejs') %>
+    <link rel="stylesheet" href="/css/cart.css">
     </head>
+
 
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
                 <% if (products.length> 0) { %>
-                    <ul>
-                        <% products.forEach(p=> {
-                            %>
-                            <li>
-                                <p>
-                                    <%= p.title %> (<%=p.cartItem.quantity %>)
-                                </p>
-                                <form action='/cart-delete-item' method="POST">
+                    <ul class="cart__item-list">
+                        <% products.forEach(p=> { %>
+                            <li class="cart__item">
+                                <h1>
+                                    <%= p.title %>
+                                </h1>
+                                <h2>Quantity: <%= p.cartItem.quantity %>
+                                </h2>
+                                <form action="/cart-delete-item" method="POST">
                                     <input type="hidden" value="<%= p.id %>" name="productId">
-                                    <button class='btn' type="submit">Delete</button>
+                                    <button class="btn danger" type="submit">Delete</button>
                                 </form>
                             </li>
                             <% }) %>
@@ -22,5 +25,6 @@
                     <% } else { %>
                         <h1>No Products in Cart!</h1>
                         <% } %>
+
             </main>
             <%- include('../partials/footer.ejs') %>
