--- a/05_DynamicContents/views/shop/index.ejs
+++ b/05_DynamicContents/views/shop/index.ejs
@@ -5,6 +5,7 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
+
                 <% if (prods.length> 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
@@ -15,7 +16,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl  %> " alt="A Book">
+                                    <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$<%= product.price %>
@@ -25,6 +26,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
+                                    <a href="/products/<%= product.id %>" class="btn">Details</a>
                                     <%- include('../partials/add-to-cart.ejs', {product : product}) %>
                                 </div>
                             </article>
