storing cartItems as OrderItems

--- a/05_DynamicContents/views/shop/cart.ejs
+++ b/05_DynamicContents/views/shop/cart.ejs
@@ -2,7 +2,6 @@
     <link rel="stylesheet" href="/css/cart.css">
     </head>
 
-
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
@@ -22,9 +21,14 @@
                             </li>
                             <% }) %>
                     </ul>
+                    <hr>
+                    <div class="centered">
+                        <form action="create-order" method="POST">
+                            <button type="submit" class="btn">Order Now!</button>
+                        </form>
+                    </div>
                     <% } else { %>
                         <h1>No Products in Cart!</h1>
                         <% } %>
-
             </main>
             <%- include('../partials/footer.ejs') %>
