--- a/05_DynamicContents/views/shop/orders.ejs
+++ b/05_DynamicContents/views/shop/orders.ejs
@@ -4,6 +4,6 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
-
+                <h1>NOTHING HERE!!!!</h1>
             </main>
             <%- include('../partials/footer.ejs') %>
