--- a/06_MongoDB-as-a-data-storage/views/shop/orders.ejs
+++ b/06_MongoDB-as-a-data-storage/views/shop/orders.ejs
@@ -3,19 +3,21 @@
 
     <body>
         <%- include('../partials/navbar.ejs') %>
+
+            <link rel="stylesheet" href="/css/orders.css">
             <main>
                 <% if (orders.length <=0) { %>
                     <h1>Nothing there!</h1>
                     <% } else { %>
-                        <ul>
+                        <ul class="orders">
                             <% orders.forEach(order=> { %>
-                                <li>
-                                    <h1># <%= order.id %>
+                                <li class="orders__item">
+                                    <h1>#order - <%= order._id %>
                                     </h1>
-                                    <ul>
-                                        <% order.products.forEach(product=> { %>
-                                            <li>
-                                                <%= product.title %> (<%= product.orderItem.quantity %>)
+                                    <ul class="orders__products">
+                                        <% order.items.forEach(product=> { %>
+                                            <li class="orders__products-item">
+                                                <%= product.title %> (<%= product.quantity %>)
                                             </li>
                                             <% }); %>
                                     </ul>
