--- a/09_authentication/views/auth/login.ejs
+++ b/09_authentication/views/auth/login.ejs
@@ -7,7 +7,7 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
-                <form class="login-form" action="login" method="POST">
+                <form class="login-form" action="/login" method="POST">
                     <div class="form-control">
                         <label for="email">E-mail</label>
                         <input type="email" name="email" id="email">
