finishing flash messages

--- a/09_authentication/views/auth/login.ejs
+++ b/09_authentication/views/auth/login.ejs
@@ -8,7 +8,7 @@
         <%- include('../partials/navbar.ejs') %>
             <main>
                 <% if (errorMessage) { %>
-                    <div class="error-message">
+                    <div class="user-message user-message--error">
                         <p>
                             <%= errorMessage %>
                         </p>
