--- a/09_authentication/views/auth/signup.ejs
+++ b/09_authentication/views/auth/signup.ejs
@@ -7,21 +7,29 @@
     <body>
         <%- include('../partials/navbar.ejs') %>
             <main>
-                <form class="login-form" action="/signup" method="POST">
-                    <div class="form-control">
-                        <label for="email">E-mail</label>
-                        <input type="email" name="email" id="email">
+                <% if (errorMessage) { %>
+                    <div class="user-message user-message--error">
+                        <p>
+                            <%= errorMessage %>
+                        </p>
                     </div>
-                    <div class="form-control">
-                        <label for="password">Password</label>
-                        <input type="password" name="password" id="password" autocomplete="on">
-                    </div>
-                    <div class="form-control">
-                        <label for="confirmPassword">Confirm Password</label>
-                        <input type="password" name="confirmPassword" id="confirmPassword">
-                    </div>
-                    <input type="hidden" name="_csrf" value="<%=csrfToken %>">
-                    <button class="btn" type="submit">Signup</button>
-                </form>
+                    <% } %>
+                        </div>
+                        <form class="login-form" action="/signup" method="POST">
+                            <div class="form-control">
+                                <label for="email">E-mail</label>
+                                <input type="email" name="email" id="email">
+                            </div>
+                            <div class="form-control">
+                                <label for="password">Password</label>
+                                <input type="password" name="password" id="password" autocomplete="on">
+                            </div>
+                            <div class="form-control">
+                                <label for="confirmPassword">Confirm Password</label>
+                                <input type="password" name="confirmPassword" id="confirmPassword">
+                            </div>
+                            <input type="hidden" name="_csrf" value="<%=csrfToken %>">
+                            <button class="btn" type="submit">Signup</button>
+                        </form>
             </main>
             <%- include('../partials/footer.ejs') %>
