--- a/12_validation-and-error-handling/views/auth/signup.ejs
+++ b/12_validation-and-error-handling/views/auth/signup.ejs
@@ -18,15 +18,17 @@
                         <form class="login-form" action="/signup" method="POST" novalidate>
                             <div class="form-control">
                                 <label for="email">E-mail</label>
-                                <input type="email" name="email" id="email">
+                                <input type="email" name="email" id="email" value="<%= oldInput.email %>">
                             </div>
                             <div class="form-control">
                                 <label for="password">Password</label>
-                                <input type="password" name="password" id="password" autocomplete="on">
+                                <input type="password" name="password" id="password" value="<%= oldInput.password %>"
+                                    autocomplete="on">
                             </div>
                             <div class="form-control">
                                 <label for="confirmPassword">Confirm Password</label>
-                                <input type="password" name="confirmPassword" id="confirmPassword">
+                                <input type="password" name="confirmPassword" id="confirmPassword"
+                                    value="<%= oldInput.confirmPassword %>">
                             </div>
                             <input type="hidden" name="_csrf" value="<%=csrfToken %>">
                             <button class="btn" type="submit">Signup</button>
