--- a/13_FileUpload-download-and-pagination/views/admin/edit-product.ejs
+++ b/13_FileUpload-download-and-pagination/views/admin/edit-product.ejs
@@ -16,7 +16,7 @@
                     <% } %>
                         <form class="product-form"
                             action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>"
-                            method="POST" enctype="multipart/form-data">
+                            enctype="multipart/form-data" method="POST">
                             <div class="form-control">
                                 <label for="title">Title</label>
                                 <input class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : ''%>"
