--- a/13_FileUpload-download-and-pagination/views/admin/products.ejs
+++ b/13_FileUpload-download-and-pagination/views/admin/products.ejs
@@ -15,7 +15,7 @@
                                     </h1>
                                 </header>
                                 <div class="card__image">
-                                    <img src="<%= product.imageUrl  %> " alt="A Book">
+                                    <img src="/<%= product.imageUrl  %> " alt="A Book">
                                 </div>
                                 <div class="card__content">
                                     <h2 class="product__price">$<%= product.price %>
