--- a/13_FileUpload-download-and-pagination/public/css/main.css
+++ b/13_FileUpload-download-and-pagination/public/css/main.css
@@ -249,6 +249,29 @@ form {
   color: red;
 }
 
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: none;
+  color: #00695c;
+  padding: 0.5rem;  
+  border: 1px solid #00695c;
+  border-radius: 0.5rem;
+  margin: 0 0.25rem;
+}
+
+.pagination a:hover,
+.pagination a:active,
+.pagination a.active {
+  background: #00695c;
+  color: white;
+}
+
+
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
