--- a/13_FileUpload-download-and-pagination/views/shop/product-list.ejs
+++ b/13_FileUpload-download-and-pagination/views/shop/product-list.ejs
@@ -35,6 +35,7 @@
                             </article>
                             <% } %>
                     </div>
+                    <%- include('../partials/pagination.ejs', {currentPage, nextPage, previousPage, lastPage}) %>
                     <% } else { %>
                         <h1>No products found</h1>
                         <% } %>
