--- a/13_FileUpload-download-and-pagination/views/shop/index.ejs
+++ b/13_FileUpload-download-and-pagination/views/shop/index.ejs
@@ -34,33 +34,8 @@
                             </article>
                             <% } %>
                     </div>
-                    <section class="pagination">
-                        <% if (currentPage !==1 && previousPage !== 1) { %>
-                            <a href="/?page=1">1</a>
-                            <% } %>
-
-                            <% if (hasPreviousPage) {%>
-                                <a href="/?page=<%= previousPage %>">
-                                    <%= previousPage %>
-                                </a>
-                                <% } %>
-
-                                <a href="/?page=<%= currentPage %>" class="active">
-                                    <%= currentPage %>
-                                </a>
-
-                                <% if (hasNextPage) {%>
-                                    <a href="/?page=<%= nextPage %>">
-                                        <%= nextPage %>
-                                    </a>
-                                    <% } %>
-
-                                        <% if (lastPage !==currentPage && nextPage !==lastPage) {%>
-                                            <a href="/?page=<%= lastPage %>">
-                                                <%= lastPage %>
-                                            </a>
-                                            <% } %>
-                    </section>
+                    <%- include('../partials/pagination.ejs', {currentPage, hasNextPage, hasPreviousPage, nextPage, previousPage, lastPage}) %>
+                   
                     <% } else { %>
                         <h1>No products found</h1>
                         <% } %>
