--- a/13_FileUpload-download-and-pagination/views/admin/products.ejs
+++ b/13_FileUpload-download-and-pagination/views/admin/products.ejs
@@ -26,10 +26,9 @@
                                 </div>
                                 <div class="card__actions">
                                     <a href="/admin/edit-product/<%= product._id %>?edit=true" class="btn">Edit</a>
-                                    <form action="/admin/delete-product" method="POST">
                                         <input type="hidden" value="<%= product._id %>" name="productId">
                                         <input type="hidden" name="_csrf" value="<%=csrfToken %>">
-                                        <button class="btn" type="submit">Delete</button>
+                                        <button class="btn" type="button" onClick="deleteProduct(this)">Delete</button>
                                     </form>
                                 </div>
                             </article>
@@ -40,3 +39,4 @@
                         <% } %>
             </main>
             <%- include('../partials/footer.ejs') %>
+            <script src="/js/admin.js"></script>
